tests/run/errors/assert_msg_err.anv
// @mode: run
// @expect: error
// @contains: custom failure message

fn main() {
    assert_msg(false, "custom failure message");
}
